package fitness.exercise;

/**
 * Class that stores static String Array constants of exercises for different body types
 * */
public class ExerciseBank {
    public static final String[] INIT_ARMS_EXERCISES = {
        "Cable Triceps Push down,Arms,3,8", "Barbell Curls,Arms,3,8", "Preacher Curls,Arms,3,8",
        "Skullcrushers,Arms,3,8", "Lateral Raises,Arms,3,8"
    };
    public static final String[] INIT_CHEST_EXERCISES = {
        "Bench Press,Chest,3,8", "Incline Bench Press,Chest,3,8", "Diamond Push-up,Chest,3,15",
        "Cable Flies,Chest,3,8", "Wide Arm Push-up,Chest,3,15"
    };
    public static final String[] INIT_ABS_EXERCISES = {
        "Sit-ups,Abs,3,20", "Russian Twists,Abs,3,20", "Crunches,Abs,5,20",
        "Flutter Kicks,Abs,4,20", "Weighted Sit-Ups,Abs,3,20"
    };
    public static final String[] INIT_BACK_EXERCISES = {
        "Pull Ups,Back,3,6", "Lateral Rows,Back,3,8", "Deadlift,Back,3,5",
        "Weighted Pull Ups,Back,3,6", "Cable Rows,Back,3,8"
    };
    public static final String[] INIT_LEGS_EXERCISES = {
        "Weighted Squats,Legs,3,10", "Leg Press,Legs,3,8", "Leg Curl,Legs,3,8",
        "Leg Extensions,Legs,3,10", "Calf Raises,Legs,3,10"
    };
}
